[package]
name = "yoi"
version = "0.0.0"
edition = "2024"
authors = ["dmyTRUEk"]
description = "Stack/Array/Golf programming language."

[profile.release]
opt-level = 3
#lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
